--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,8 @@
 version: "3.9"
 services:
   minecraft:
-    image: "marctv/minecraft-papermc-server:latest"
+    build: 
+      '.'
     restart: always
     container_name: "mcserver"
     environment:
